# LocalChess

./: CMakeLists.txt
client/: main.cpp
server/: main.cpp
